<resources>
    <string name="app_name">ToDo Notes</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="login">Login</string>
    <string name="add_notes">Add Notes</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
